--- a/admin/public/.htaccess
+++ b/admin/public/.htaccess
@@ -5,6 +5,16 @@
 
     RewriteEngine On
 
+    # Redirect www to non-www (301 permanent redirect for SEO)
+    # This ensures search engines prefer grozee.com over www.grozee.com
+    # Handles both HTTP and HTTPS
+    RewriteCond %{HTTP_HOST} ^www\.grozee\.com$ [NC]
+    RewriteCond %{HTTPS} on
+    RewriteRule ^(.*)$ https://grozee.com/$1 [R=301,L]
+    RewriteCond %{HTTP_HOST} ^www\.grozee\.com$ [NC]
+    RewriteCond %{HTTPS} off
+    RewriteRule ^(.*)$ https://grozee.com/$1 [R=301,L]
+
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
